tests/errors/semantic/non_blocking/PRIMITIVE_IMMUTABLE_RESTRICTION_IS_complex.py
# pylint: disable=missing-function-docstring, missing-module-docstring
@types('complex', 'complex')
def compare_is_complex(a, b):
    return a is b
